RM#70293: Stock : change location financial data by date