@@ -19,17 +19,13 @@
 package com.axelor.apps.stock.web;
 
 import com.axelor.apps.base.AxelorException;
-import com.axelor.apps.base.db.BirtTemplate;
-import com.axelor.apps.base.db.repo.TraceBackRepository;
-import com.axelor.apps.base.exceptions.BaseExceptionMessage;
-import com.axelor.apps.base.service.birt.template.BirtTemplateService;
 import com.axelor.apps.base.service.exception.TraceBackService;
 import com.axelor.apps.report.engine.ReportSettings;
 import com.axelor.apps.stock.db.StockLocation;
 import com.axelor.apps.stock.db.repo.StockLocationRepository;
 import com.axelor.apps.stock.exception.StockExceptionMessage;
+import com.axelor.apps.stock.service.StockLocationPrintService;
 import com.axelor.apps.stock.service.StockLocationService;
-import com.axelor.apps.stock.service.config.StockConfigService;
 import com.axelor.common.ObjectUtils;
 import com.axelor.i18n.I18n;
 import com.axelor.inject.Beans;
@@ -38,22 +34,17 @@ import com.axelor.rpc.ActionRequest;
 import com.axelor.rpc.ActionResponse;
 import com.axelor.rpc.Context;
 import com.axelor.utils.db.Wizard;
-import com.google.common.base.Joiner;
 import com.google.inject.Singleton;
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import org.apache.commons.lang3.ArrayUtils;
 import org.eclipse.birt.core.exception.BirtException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 @Singleton
 public class StockLocationController {
-
-  private final Logger logger = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
   /**
    * Method that generate inventory as a pdf
@@ -67,101 +58,49 @@ public class StockLocationController {
   public void print(ActionRequest request, ActionResponse response) throws AxelorException {
     try {
       Context context = request.getContext();
-      @SuppressWarnings("unchecked")
+
+      // print from form
       LinkedHashMap<String, Object> stockLocationMap =
           (LinkedHashMap<String, Object>) context.get("_stockLocation");
       Integer stockLocationId = (Integer) stockLocationMap.get("id");
-      StockLocationService stockLocationService = Beans.get(StockLocationService.class);
-      StockLocationRepository stockLocationRepository = Beans.get(StockLocationRepository.class);
 
-      StockLocation stockLocation =
-          stockLocationId != null ? stockLocationRepository.find(new Long(stockLocationId)) : null;
-      String locationIds = "";
-
-      String printType = (String) context.get("printingType");
-      String exportType = (String) context.get("exportTypeSelect");
-
-      @SuppressWarnings("unchecked")
-      List<Integer> lstSelectedLocations = (List<Integer>) context.get("_ids");
+      // print from grid selection
+      List<Integer> selectedStockLocationIds = (List<Integer>) context.get("_ids");
 
       boolean withoutDetailsByStockLocation =
           context.get("withoutDetailsByStockLocation") != null
               && (boolean) context.get("withoutDetailsByStockLocation");
 
-      if (withoutDetailsByStockLocation) {
-        locationIds += stockLocationId;
-      } else {
-        if (lstSelectedLocations != null) {
-          for (Integer it : lstSelectedLocations) {
-            Set<Long> idSet =
-                stockLocationService.getContentStockLocationIds(
-                    stockLocationRepository.find(new Long(it)));
-            if (!idSet.isEmpty()) {
-              locationIds += Joiner.on(",").join(idSet) + ",";
-            }
-          }
-        }
+      Long[] idsArray =
+          ObjectUtils.notEmpty(selectedStockLocationIds)
+              ? ArrayUtils.toObject(
+                  selectedStockLocationIds.stream().mapToLong(Long::valueOf).toArray())
+              : new Long[] {Long.valueOf(stockLocationId)};
 
-        if (!locationIds.equals("")) {
-          locationIds = locationIds.substring(0, locationIds.length() - 1);
-          stockLocation = stockLocationRepository.find(new Long(lstSelectedLocations.get(0)));
-        } else if (stockLocation != null && stockLocation.getId() != null) {
-          Set<Long> idSet =
-              stockLocationService.getContentStockLocationIds(
-                  stockLocationRepository.find(stockLocation.getId()));
-          if (!idSet.isEmpty()) {
-            locationIds = Joiner.on(",").join(idSet);
-          }
-        }
-      }
+      String printTypeStr = (String) context.get("printingType");
+      String exportType = (String) context.get("exportTypeSelect");
 
-      if (!locationIds.equals("")) {
-        String language = ReportSettings.getPrintingLocale(null);
+      Integer printType = Integer.parseInt(printTypeStr);
+      String financialDataDateTimeString = (String) context.get("financialDataDateTime");
+      LocalDateTime financialDataDateTime =
+          StockLocationRepository.PRINT_TYPE_LOCATION_FINANCIAL_DATA == printType
+                  && financialDataDateTimeString != null
+              ? LocalDateTime.parse(financialDataDateTimeString, DateTimeFormatter.ISO_DATE_TIME)
+              : LocalDateTime.now();
 
-        String title = I18n.get("Stock location");
-        if (stockLocation.getName() != null) {
-          title =
-              lstSelectedLocations == null
-                  ? I18n.get("Stock location") + " " + stockLocation.getName()
-                  : I18n.get("Stock location(s)");
-        }
+      ReportSettings reportSettings =
+          Beans.get(StockLocationPrintService.class)
+              .print(
+                  printType,
+                  exportType,
+                  financialDataDateTime,
+                  withoutDetailsByStockLocation,
+                  idsArray);
 
-        if (stockLocationService.isConfigMissing(stockLocation, Integer.parseInt(printType))) {
-          response.setNotify(I18n.get(StockExceptionMessage.STOCK_CONFIGURATION_MISSING));
-        }
+      String fileLink = reportSettings.getFileLink();
+      String title = reportSettings.getOutputName();
 
-        BirtTemplate stockLocationBirtTemplate =
-            Beans.get(StockConfigService.class)
-                .getStockConfig(stockLocation.getCompany())
-                .getStockLocationBirtTemplate();
-        if (ObjectUtils.isEmpty(stockLocationBirtTemplate)) {
-          throw new AxelorException(
-              TraceBackRepository.CATEGORY_CONFIGURATION_ERROR,
-              I18n.get(BaseExceptionMessage.BIRT_TEMPLATE_CONFIG_NOT_FOUND));
-        }
-        String fileLink =
-            Beans.get(BirtTemplateService.class)
-                .generateBirtTemplateLink(
-                    stockLocationBirtTemplate,
-                    null,
-                    Map.of(
-                        "StockLocationId",
-                        locationIds,
-                        "PrintType",
-                        printType,
-                        "WithoutDetailsByStockLocation",
-                        withoutDetailsByStockLocation),
-                    title + "-${date}",
-                    stockLocationBirtTemplate.getAttach(),
-                    exportType);
-
-        logger.debug("Printing " + title);
-
-        response.setView(ActionView.define(title).add("html", fileLink).map());
-
-      } else {
-        response.setInfo(I18n.get(StockExceptionMessage.LOCATION_2));
-      }
+      response.setView(ActionView.define(title).add("html", fileLink).map());
       response.setCanClose(true);
     } catch (Exception e) {
       TraceBackService.trace(response, e);
